Fix report page sidebar flicker

--- a/admin/webUI/assets/css/_utility.css
+++ b/admin/webUI/assets/css/_utility.css
@@ -228,6 +228,10 @@
   display: block;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 
 /*Dropdown Menu*/
 
